--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,9 +9,9 @@
   <b>Cerevis:</b>
   <%= @user.cerevis %>
 </p>
-
-<h2>Verbindung</h2>
-<%= render @user.verbindung %>
-
+<div>
+  <b>Verbindung:</b>
+    <%= render @user.verbindung %>
+</div>
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
