--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing user</h1>
+<h1>Daten Bearbeiten</h1>
 
 <%= render 'form' %>
+
+<%= link_to 'E-Mail oder Passwort bearbeiten', edit_user_registration_path %>
 
 <%= link_to 'Show', @user %> |
 <%= link_to 'Back', users_path %>
