--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,10 @@
   <b>Email:</b>
   <%= @user.email %>
 </p>
-
+<p>
+  <b>Name:</b>
+  <%= @user.name %>
+</p>
 <p>
   <b>Cerevis:</b>
   <%= @user.cerevis %>
