--- a/app/views/verbindungs/events_archive.html.erb
+++ b/app/views/verbindungs/events_archive.html.erb
@@ -8,4 +8,4 @@
 
 <br />
 
-<%= link_to 'Aktuelle Anlässe', index_verbindung_events(@verbindung) %>
+<%= link_to 'Aktuelle Anlässe', verbindung_events_path(@verbindung) %>
