--- a/app/assets/stylesheets/overall.css
+++ b/app/assets/stylesheets/overall.css
@@ -14,26 +14,49 @@
     display: inline-block
 }
 
+div.title_and_nav{
+    text-align: center;
+    border-width: 0px;
+    border-bottom: 1px;
+    border-style: solid;
+    border-color: black;
+    padding-bottom: 15px;
+    width: 100%;
+    /*box-shadow: 0px 0px 2px 0px black;*/
+}
+h1 {
+
+}
+div.content {
+    text-align: center;
+    width: 100%;
+}
+
 .events {
-    background-color: #d3d3d3;
+    /*background-color: #d3d3d3;*/
     width: 800px;
+    padding: 5px;
+    margin: 0 auto;
 }
 
 .event_participants{
     float: left;
+    margin: 10px;
     padding-left: 5px;
     font-size: 9px;
 }
 
 .event {
     border: solid 1px;
-    padding: 5px;
-    margin: 10px;
+    text-align: left;
+    margin: 5px;
 }
 
 .event_title {
     float: left;
+    font-size: 16px;
     font-weight: bold;
+    margin: 10px;
 }
 
 .event_date {
@@ -41,4 +64,29 @@
 }
 .event_content{
     clear: both;
+    margin: 10px;
+}
+.event_footer {
+    margin: 10px;
+}
+
+div.navigation_bar a {
+    text-decoration: none;
+    letter-spacing: 0.2em;
+    font-weight: 600;
+    margin: 0px 5px 0px 0px;
+    padding: 0px 0px 0px 6px;
+
+}
+
+div.navigation_bar a:hover {
+    border: 1px solid black;
+    padding: 0px 0px 0px 5px;
+    border-right: 0px;
+    /*border-bottom: 0px;*/
+    border-top: 0px;
+}
+
+.event_footer a {
+    margin: 0px 10px 0px 0px;
 }
