--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,10 +6,13 @@
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
-    <div><%= f.label :verbindung %><br />
-      <%= f.collection_select(:verbindung_id, Verbindung.all, :id, :name)%></div>
+<div><%= f.label :name %><br />
+<%= f.text_field :name %></div>
 
-    <div><%= f.label :password %><br />
+<div><%= f.label :verbindung %><br />
+<%= f.collection_select(:verbindung_id, Verbindung.all, :id, :name)%></div>
+
+<div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
 
   <div><%= f.label :password_confirmation %><br />
