--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :email %><br />
     <%= f.text_field :email %>
   </div>
+    <div class="name">
+      <%= f.label :name %><br />
+      <%= f.text_field :name %>
+    </div>
   <div class="field">
     <%= f.label :cerevis %><br />
     <%= f.text_field :cerevis %>
