--- a/app/views/verbindungs/show.html.erb
+++ b/app/views/verbindungs/show.html.erb
@@ -14,5 +14,9 @@
   <%= link_to 'Anlässe', verbindung_events_path(@verbindung) %>
 </p>
 
+<p>
+  <%= link_to 'Mitglieder', members_verbindung_path(@verbindung) %>
+</p>
+
 <%= link_to 'Edit', edit_verbindung_path(@verbindung) %> |
 <%= link_to 'Back', verbindungs_path %>
