--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -15,11 +15,6 @@
   <%= @news.date %>
 </p>
 
-<p>
-  <b>Verbindung:</b>
-  <%= @news.verbindung %>
-</p>
 
-
-<%= link_to 'Edit', edit_news_path(@news) %> |
-<%= link_to 'Back', news_index_path %>
+<%= link_to 'Edit', edit_verbindung_news_path(@news) %> |
+<%= link_to 'Back', verbindung_news_index_path %>
