--- a/app/views/pruegel_entity/_form.html.erb
+++ b/app/views/pruegel_entity/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@event, :url => verbindung_events_path(@verbindung, @event)) do |f| %>
-  <% if @event.errors.any? %>
+<%= form_for(@entity, :url => verbindung_biercomments_url(@verbindung, @entity)) do |f| %>
+  <% if @entity.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
+      <h2><%= pluralize(@entity.errors.count, "error") %> prohibited this event from being saved:</h2>
 
       <ul>
-      <% @event.errors.full_messages.each do |msg| %>
+      <% @entity.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
@@ -18,10 +18,6 @@
   <div class="field">
     <%= f.label :content %><br />
     <%= f.text_area :content %>
-  </div>
-  <div class="field">
-    <%= f.label :date %><br />
-    <%= f.date_select :date, :locale => 'de'%>
   </div>
   <div class="actions">
     <%= f.submit %>
