--- a/app/views/pruegel_entity/_form.html.erb
+++ b/app/views/pruegel_entity/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for(@entity, :url => verbindung_biercomments_url(@verbindung, @entity)) do |f| %>
-  <% if @entity.errors.any? %>
+<%= form_for [@verbindung, @entity] do |f| %>
+    <% if @entity.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@entity.errors.count, "error") %> prohibited this event from being saved:</h2>
 
