--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -14,7 +14,7 @@
       <% end %>
     </div>
     <div class = "event_date">
-      <%= event.date %>
+      <%= I18n.l event.date %>
     </div>
   </div>
   <div class="event_content">
