--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,38 +1,97 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Iuvenes</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-<div class="title_and_nav">
-    <h1>IUVENES!
-     <% if user_signed_in? then %>
-       -   <%= render :partial => 'verbindungs/verbindung', :object => current_user.verbindung %>
-     <% end %>
-    </h1>
-    <div class="navigation_bar">
-      <% if user_signed_in? then %>
-          <%= if current_user.root? then link_to "Verbindungen", verbindungs_path end%>
-          <%= link_to "News", verbindung_news_index_path(current_user.verbindung) %>
-          <%= link_to "Anlässe", verbindung_events_path(current_user.verbindung) %>
-          <%= link_to "Profil", current_user %>
-          <%= if current_user.admin? || current_user.root? then link_to "Benutzer", users_path end %>
-          <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
-          <% if !Rails.env.production? %>
-            <%= link_to((if current_user.admin? then "ADMIN" else "NOT ADMIN" end), toggle_admin_path) %>
-            <%= link_to((if current_user.root? then "ROOT" else "NOT ROOT" end), toggle_root_path) %>
-          <% end %>
-      <% else %>
-          <%= link_to "Einloggen", new_user_session_path %>
-          <%= link_to "Registrieren", new_user_registration_path %>
-      <% end %>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7 ]> <html class="ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]>    <html class="ie8" lang="en"> <![endif]-->
+<!--[if IE 9 ]>    <html class="ie9" lang="en"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
+  <head>
+  	<meta charset="utf-8" />
+
+  	<!-- Uncomment to make IE8 render like IE7 -->
+  	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
+
+  	<!-- Set the viewport width to device width for mobile -->
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  	<title><%= content_for?(:title) ? yield(:title) : "Iuvenes" %></title>
+
+  	<%= stylesheet_link_tag    "application" %>
+  	<%= javascript_include_tag "vendor/custom.modernizr" %>
+    <%= csrf_meta_tags %>
+  </head>
+
+  <body>
+
+      <nav class="top-bar">
+        <ul class="title-area">
+          <li class="name">
+            <h1><a href="#">IUVENES!
+              <% if user_signed_in? then %>
+                  - <%= current_user.verbindung.name %>
+              <% end %>
+            </a>
+            </h1>
+          </li>
+        </ul>
+        <section class="top-bar-section">
+          <ul class="center">
+            <% if user_signed_in? then %>
+                <li class="divider"></li>
+                <li><%= link_to "News", verbindung_news_index_path(current_user.verbindung) %> </li>
+                <li class="divider"></li>
+                <li><%= link_to "Anlässe", verbindung_events_path(current_user.verbindung) %></li>
+                <li class="divider"></li>
+                <li><%= link_to "Kanten", verbindung_kants_path(current_user.verbindung) %></li>
+                <li class="divider"></li>
+                <li><%= link_to "Biercomment", verbindung_biercomments_path(current_user.verbindung) %></li>
+            <% end %>
+          </ul>
+          <ul class="right">
+            <% if user_signed_in? then %>
+                <% if (current_user.admin? || current_user.root?) %>
+                    <li class="has-dropdown"><a href="#">Administaration</a>
+
+                      <ul class="dropdown">
+                        <% if current_user.root? then %>
+                            <li><%= link_to "Verbindungen", verbindungs_path %></li>
+                        <%end%>
+
+                        <% if current_user.admin? || current_user.root? then %>
+                            <li><%= link_to "Benutzer", users_path %></li>
+                        <% end %>
+
+                        <% if !Rails.env.production? %>
+                            <li class="divider"></li>
+
+                            <li><%= link_to((if current_user.admin? then "ADMIN" else "NOT ADMIN" end), toggle_admin_path) %></li>
+                            <li><%= link_to((if current_user.root? then "ROOT" else "NOT ROOT" end), toggle_root_path) %></li>
+                        <% end %>
+                      </ul>
+                    </li>
+                <% end %>
+
+                <li class="divider"></li>
+                <li><%= link_to "Profil", current_user %> </li>
+                <li class="divider"></li>
+                <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
+            <% else %>
+                <li class="divider"></li>
+                <li><%= link_to "Einloggen", new_user_session_path %> </li>
+                <li class="divider"></li>
+                <li><%= link_to "Registrieren", new_user_registration_path %></li>
+            <% end %>
+          </ul>
+        </section>
+      </nav>
+
+
+    <div class="row">
+      <div class="large-centered small-9 collumns ">
+        <%= yield %>
+      </div>
     </div>
-</div>
-<div class="content">
-    <%= yield %>
-</div>
-</body>
+    
+    <%= javascript_include_tag "application" %>
+  </body>
 </html>
