--- a/app/views/news/_news.html.erb
+++ b/app/views/news/_news.html.erb
@@ -4,7 +4,7 @@
       <%= news.title %>
     </div>
     <div class = "news_date">
-      <%= news.date %>
+      <%= I18n.l news.date %>
     </div>
   </div>
   <div class="news_content">
