--- a/app/views/verbindungs/members.erb
+++ b/app/views/verbindungs/members.erb
@@ -1,8 +1,8 @@
 <h2>Mitglieder</h2>
 
+  <ul>
 <% @members.each do |member| %>
-  <div>
-    <%= render member %>
-  </div>
+    <li><%= render member %></li>
 <% end %>
+  </ul>
 
