--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -205,15 +205,15 @@ $default-float: left;
 
 // Style paragraphs
 
-// $paragraph-font-family: inherit;
-// $paragraph-font-weight: normal;
-// $paragraph-font-size: 1em;
-// $paragraph-line-height: 1.6;
-// $paragraph-margin-bottom: em-calc(20);
-// $paragraph-aside-font-size: em-calc(14);
-// $paragraph-aside-line-height: 1.35;
-// $paragraph-aside-font-style: italic;
-// $paragraph-text-rendering: optimizeLegibility;
+// $paragraph.rb-font-family: inherit;
+// $paragraph.rb-font-weight: normal;
+// $paragraph.rb-font-size: 1em;
+// $paragraph.rb-line-height: 1.6;
+// $paragraph.rb-margin-bottom: em-calc(20);
+// $paragraph.rb-aside-font-size: em-calc(14);
+// $paragraph.rb-aside-line-height: 1.35;
+// $paragraph.rb-aside-font-style: italic;
+// $paragraph.rb-text-rendering: optimizeLegibility;
 
 // Style <code> tags
 
