--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <br />
-<% if (current_user.root? || current_user.admin?) then %>
+<% if (current_user.root? || (current_user.admin? && current_user.verbindung_id == @verbindung.id)) then %>
     <%= link_to 'New Event', new_verbindung_event_path(@verbindung) %>
 <% end %>
 <%= link_to 'Archiv', events_archive_verbindung_path(@verbindung) %>
