--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,20 @@
-Hello World!
+<h1>Iuvenes!</h1>
+<div class='row'>
+  <div class='column small-10'>
+    <p>
+    Iuvenes ist der Prügel der Zukunft! Wir alle lieben unseren Prügel. Sein retro-look läst uns dahinschmelzen und die
+    darin gesammelten Erinnerungen schwingen uns in den siebten Himmel. Das 101 eines jeden Couler Bruders findet sich in seinem
+    Prügel wieder. Wieso dann einen Prügel der Zukuft?
+    </p><p>
+      Der online Prügel Iuvenes bietet eine Ergänzung zum offline Prügel, mit Apps für Android, IPhone und Windows Phone
+      ist er bei jedem Couleriker immer dabei und enthält neben den Kanten, dem Biercomment und den Statuten aktuelle
+      News zur Verbindung sowie bevorstehende Anlässe.
+
+
+  </p>
+  </div>
+</div>
+<div class='row'>
+
+
+</div>
