--- a/app/assets/stylesheets/verbindungs.css.scss
+++ b/app/assets/stylesheets/verbindungs.css.scss
@@ -4,8 +4,8 @@
 
 .detail_tooltip {
   display: none;
-  border: solid 1px;
-  background: rgba(255,255,255,1);
+  border: solid 1px #d0d0d0;
+  background-color: #e9e9e9;
   position:absolute;
   font-size: 12px;
   font-weight: normal;
@@ -13,7 +13,21 @@
   left: 110%;
   white-space: nowrap;
   padding: 5px;
+  width: 200px;
+
+  div.tooltip_pic {
+    height: 50px;
+    width: 50px;
+    float: left;
+    background-repeat: no-repeat;
+  }
+
+  div.tooltip_text {
+    float: right;
+  }
 }
+
+
 .verbindung {
   display: inline-block
 }
