--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,25 @@
-<h1>Listing users</h1>
+<h1>Benutzerkontent</h1>
 
+ <h2>Nicht freigeschaltete Benutzer</h2>
+<table>
+  <tr>
+    <th>Email</th>
+    <th>Cerevis</th>
+    <th></th>
+    <th></th>
+  </tr>
+
+  <% @unapproved_users.each do |user| %>
+      <tr>
+        <td><%= user.email %></td>
+        <td><%= user.cerevis %></td>
+        <td><%= link_to 'Freischalten', approve_user_path(user), method: :post%></td>
+        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Sind Sie sicher, dass sie diesen Benutzer loeschen wollen?' } %></td>
+      </tr>
+  <% end %>
+</table>
+
+<h2>Alle Benutzer</h2>
 <table>
   <tr>
     <th>Email</th>
@@ -15,7 +35,7 @@
     <td><%= user.cerevis %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Sind Sie sicher, dass sie diesen Benutzer loeschen wollen?' } %></td>
   </tr>
 <% end %>
 </table>
